Bug 1476204 - Make the basic-card-option field order and alignment match the <option>. r=sfoster
MozReview-Commit-ID: 4YA8Ff7Irc3

UltraBlame original commit: d717ad76e6169d7d48c1c89ee02603af4eaa21e4

--- a/browser/components/payments/res/components/basic-card-option.css
+++ b/browser/components/payments/res/components/basic-card-option.css
@@ -3,9 +3,9 @@
 
 
 basic-card-option {
-  grid-row-gap: 5px;
-  grid-column-gap: 10px;
-  grid-template-areas: "type cc-number cc-name cc-exp";
+  grid-column-gap: 1ch;
+  grid-template-areas: "type cc-number cc-exp cc-name";
+  justify-content: start;
 }
 
 basic-card-option > .cc-number {
